5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1756_1183.log
== TEST (2019-05-27 13:19:16) 
-- CODE:
from numpy import*
a = array(eval(input("")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida    
while ()
-- ERROR:
File "XXXX", line 7
    while ()
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:23:42) 
-- CODE:
from numpy import*
a = array(eval(input("")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor 
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:29:04) 
-- CODE:
from numpy import*
a = array(eval(input("")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de en
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 14:29:05) 
-- CODE:
from numpy import*
a = array(eval(input("")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de en
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
print(i)
-- EXECUTION TIME:
0.271465
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
1
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
3
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:24) 
-- CODE:
from numpy import*
a = array(eval(input("")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de en
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 14:30:24) 
-- CODE:
from numpy import*
a = array(eval(input("")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de en
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
print(i)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:01:04) 
-- CODE:
from numpy import*
a = array(eval(input("vetor 1")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada para o vetor de saida
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1

b = arange(i)
while (k < size(a)):
	if (a[k] > 0):
		b[j]=a[k]
		j= j + 1
	k = k + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:01:04) 
-- CODE:
from numpy import*
a = array(eval(input("vetor 1")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada para o vetor de saida
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1

b = arange(i)
while (k < size(a)):
	if (a[k] > 0):
		b[j]=a[k]
		j= j + 1
	k = k + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:02:31) 
-- CODE:
from numpy import*
a = array(eval(input("vetor 1")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada para o vetor de saida
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
k=0
b = arange(i)
while (k < size(a)):
	if (a[k] > 0):
		b[j]=a[k]
		j= j + 1
	k = k + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 15:02:42) 
-- CODE:
from numpy import*
a = array(eval(input("vetor 1")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada para o vetor de saida
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
k=0
b = arange(i)
while (k < size(a)):
	if (a[k] > 0):
		b[j]=a[k]
		j= j + 1
	k = k + 1
print(b)
		
-- EXECUTION TIME:
0.472172
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:04:27) 
-- CODE:
from numpy import*
a = array(eval(input("vetor 1")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada para o vetor de saida
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
k=0
b = arange(i)
while (k < size(a)):
	if (a[k] > 0):
		b[j]=a[k]
		j= j + 1
	k = k + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 15:05:02) 
-- CODE:
from numpy import*
a = array(eval(input("vetor 1")))
i= 0 #quantidade de elementos nao negativos
j= 0 #copiar os elementos nao negativos do vetor de entrada para o vetor de saida
k= 0 # posicao do vetor entrada
l= 0 # posicao do vetor saida
while (k < size(a)) :
	if (a[k] > 0):
		i = i + 1
	k = k + 1
k=0
b = arange(i)
while (k < size(a)):
	if (a[k] > 0):
		b[j]=a[k]
		j= j + 1
	k = k + 1
print(b)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
